.metadata/.plugins/org.eclipse.cdt.ui/FileIO.build.log
21:31:12 **** Incremental Build of configuration Debug for project FileIO ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o file_io.o "..\\file_io.cpp" 
..\file_io.cpp: In function 'int main()':
..\file_io.cpp:37:2: error: expected unqualified-id before 'if'
  if (!infs.is_open()) {
  ^

21:31:13 Build Finished (took 238ms)

